--- a/ansible_roles/group_vars/web.yml
+++ b/ansible_roles/group_vars/web.yml
@@ -4,7 +4,7 @@ web:
     - epel-release
     - http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
   php:
-    version: php74
+    version: 74
     packages:
       - php
       - php-cli
