--- a/ansible_roles/group_vars/db.yml
+++ b/ansible_roles/group_vars/db.yml
@@ -4,10 +4,9 @@ db:
     Components:
       - mariadb-server
       - MySQL-python
-    version:
-      - 10.1
+    version: "10.1"
   sql_db:
     db_name: wordpress
     user_name: web_user
     password: password
-    connection_sorce_ip: 192.168.16.12
+    connection_sorce_ip: "192.168.16.12"
